@@ -1,3 +1,7 @@
+2011-01-26  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc.c-torture/compile/20110126-1.c: New test.
+
 2011-01-25  Tobias Burnus  <burnus@net-b.de>
 
 	Backport from mainline
