@@ -1,3 +1,9 @@
+2011-01-26  Eric Botcazou  <ebotcazou@adacore.com>
+
+	PR rtl-optimization/44469
+	* cfgcleanup.c (try_optimize_cfg): Iterate in CFG layout mode too
+	after removing trivially dead basic blocks.
+
 2011-01-25  Richard Guenther  <rguenther@suse.de>
 
 	PR tree-optimization/47411
